--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-Hello World
-ara
-r
-a
-aw
-raw
-r
-awr
-aw
+<!DOCTYPE html>
+<html>
+	<head>
+	<titel>Page Title</titel>
+	</head>
+	<body>
+		<h1>This is a Heading<h1>
+		<p>This is a paragraph.</p>
+	</body>
+</html>
