--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<titel>Page Title</titel>
 	</head>
 	<body>
-		<h1>This is a Heading<h1>
-		<p>This is a paragraph.</p>
+		<h1>
+			This is a Heading
+		</h1>
+		<p>
+			This is a paragraph.
+		</p>
 	</body>
 </html>
