--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 							<h3>The Infinite World Simulation</h3>
 							<p>Developed in Java, the Infinite World Simulation depicts an endless simulation of
 								numerous interactive entities that exhibit behavioral changes based on both entity
-								and player controlled events, enhanced with an integrated A-star pathing strategy.
-								This program follows an object-oriented style of programming with an enphasis on
+								and player-controlled events, enhanced with an integrated A-star pathing strategy.
+								This program follows an object-oriented style of programming with an emphasis on
 								inheritance and abstract classes.  </p>
 							<a href="https://github.com/baxtertyler/CSC203-ProjectVirtualWorldSim">
 								<i class="fa-solid fa-code"></i>
@@ -125,11 +125,11 @@
 						<img src="images/weatherBot.png">
 						<div class="layer">
 							<h3>WeatherBOT</h3>
-							<p>Developed in Python, weatherBOT is the last weather forcast provider
+							<p>Developed in Python, weatherBOT is the last weather forceast provider
 								you will every need! Using packages smtplib and emailMessage, weatherBOT provides
 								the user with daily practical weather information. This program
 								uses analysis of .csv files based on current weather patterns to send
-								texts or emails with personalized recomendations to stay comfortable every day.
+								texts or emails with personalized recommendations to stay comfortable every day.
 							</p>
 							<a href="https://github.com/baxtertyler/WeatherBOT">
 								<i class="fa-solid fa-code"></i>
@@ -140,10 +140,10 @@
 						<img src="images/targetpractice.png">
 						<div class="layer">
 							<h3>Target Practice!!!</h3>
-							<p>Developed in JavaScript, Target Practice is a procedurally written videogame
+							<p>Developed in JavaScript, Target Practice is a procedurally written video game
 								meant to perfect the users mouse-click accuracy. Packed
-								with multiple game modes, difficulties, color shemes, and an in-game shop, this
-								game provides the user with endless fun. This game includes custom annimations alongside an intelligent 
+								with multiple game modes, difficulties, color schemes, and an in-game shop, this
+								game provides the user with endless fun. This game includes custom animations alongside an intelligent 
 								CPU 
 							</p>
 							<a href="https://github.com/baxtertyler/Target-Practice">
