--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
 				<h1 class="sub-title">My Work</h1>
 				<div class="work-list">
 					<div class="work">
+						<img src="images/uks.png">
+						<div class="layer">
+							<h3>Unarmed Knights</h3>
+							<p>Two clueless knights have lost their swords and now must survive the 
+								waves of ghosts with a new tool: a magic rope. Written in C++, this game
+								utilizes SFML to create a fun and replayable game that everyone can enjoy.
+								The sophisticated collision and animation systems provide an immersive
+								game experience that lasts as long as your nights can survive!
+							</p>
+							<a href="https://github.com/baxtertyler/Target-Practice">
+								<i class="fa-solid fa-code"></i>
+							</a>
+						</div>
+					</div>
+					<div class="work">
 						<img src="images/worldsim.png">
 						<div class="layer">
 							<h3>The Infinite World Simulation</h3>
@@ -136,23 +151,8 @@
 							</a>
 						</div>
 					</div>
-					<div class="work">
-						<img src="images/targetpractice.png">
-						<div class="layer">
-							<h3>Target Practice!!!</h3>
-							<p>Developed in JavaScript, Target Practice is a procedurally written video game
-								meant to perfect the users mouse-click accuracy. Packed
-								with multiple game modes, difficulties, color schemes, and an in-game shop, this
-								game provides the user with endless fun. This game includes custom animations alongside an intelligent 
-								CPU 
-							</p>
-							<a href="https://github.com/baxtertyler/Target-Practice">
-								<i class="fa-solid fa-code"></i>
-							</a>
-						</div>
-					</div>
 				</div>
-				<a href="https://github.com/baxtertyler?tab=repositories" class="btn">More Projects</a>
+				<a href="projects.html" class="btn">More Projects</a>
 			</div>
 		</div>
 
