--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 				</div>
-				<a href="projects.html" class="btn">CLICK HERE For More About Projects</a>
+				<a href="projects.html" class="btn">More Projects</a>
 			</div>
 		</div>
 
