--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								waves of ghosts with a new tool: a magic rope. Written in C++, this game
 								utilizes SFML to create a fun and replayable game that everyone can enjoy.
 								The sophisticated collision and animation systems provide an immersive
-								game experience that lasts as long as your nights can survive!
+								game experience that lasts as long as your knights can survive!
 							</p>
 							<a href="https://github.com/baxtertyler/Unarmed-Knights">
 								<i class="fa-solid fa-code"></i>
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 				</div>
-				<a href="projects.html" class="btn">More Projects</a>
+				<a href="projects.html" class="btn">Learn More About Projects</a>
 			</div>
 		</div>
 
