--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 <h1>Role Description</h1>
                 <ul>
                     <li>Sole creater of the project, generating all coding and implementation in an object-oriented format from start to finish.</li>
-                    <li>Created a sophisticated collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
+                    <li>Created a sophisticated AABB collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
                     <li>Implemented dynamic sprite animations using sprite sheets, allowing characters and objects to respond seamlessly to the game's current state and enhancing visual appeal.</li>
                     <li>Untilized the SFML (Simple and Fast Multimedia Library) import to establish the start/game/end windows and capture key inputs, providing players with an intuitive and responsive gaming interface.</li>
                 </ul>
