--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 										<span>Relevent Courses</span>
 										<ul>Systems Programming</ul>
 										<ul>Design and Analysis of Algorithms</ul>
+										<ul>Introduction to Software Engineering</ul>
 										<ul>Project-Based Object-Oriented Programming and Design</ul>
 										<ul>Data Structures</ul>
 									</li>
