--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 <h1>Project Description</h1>
                 <p>Program created in Java with Processing</p>
                 <p>
-                    This simulated program displays the creation of an infinitely expansive 
+                    This simulated program displays the creation of an infinitely running 
                     virtual world inhabited by interactive entities. These entities exhibited dynamic 
                      behavioral changes in response to simulated events, offering a captivating 
                      simulation experience. An ingenious A-star pathing strategy was devised 
