new pic for world sim

--- a/projects.html
+++ b/projects.html
@@ -57,17 +57,13 @@
             <div class="text">
                 <h1>Role Description</h1>
                 <ul>
-                    <li>Worked to modify procedurally written single file .java program into an 
-                        extensive object-oriented project based on customly desiged .yml diagram
+                    <li>Worked to modify procedurally written single file .java program into an extensive object-oriented project based on personally designed .yml diagram
                     </li>
-                    <li>Implemented an A * pathing strategy for entitites to effectively move across 
-                        the 2D playgrid for smooth and efficient gameplay.
+                    <li>Implemented an A * pathing strategy for entities to effectively move across the 2D play-grid for smooth and efficient gameplay.
                     </li>
-                    <li>Created art and action for new entites based on both in-game and player-created 
-                        events.
+                    <li>Created art and action for new entities based on both in-game and player-created events.
                     </li>
-                    <li>Synced entites with gameplay clock to ensure neverending simulation as well 
-                        as new situations each run through. 
+                    <li>Synced entities with gameplay clock to ensure never ending simulation as well as new situations each run through.
                     </li>
                 </ul>
             </div>
