--- a/projects.html
+++ b/projects.html
@@ -151,10 +151,10 @@
                     Remakes of the classics utilizing package PyGame to take care of window and key inputs.
                     <br>In Snake, gobble up fruits like your life's one big fruit salad, just watch out for those 
                     embarrassing self-hugs and walls! As your snake grows, so does its speed!
-                    How long can you dodge disaster and stay alive
+                    How long can you dodge disaster and stay alive?
                     <br>In Asteroids, pilot your rocket ship by 
                     rotating and using thrust to navigate the cosmic minefield. Your mission: evade incoming 
-                    asteroids and shoot them down to rack up points. How long can you survive this celestial challenge?"
+                    asteroids and shoot them down to rack up points. How long can you survive this celestial challenge?
                 </p>
             </div>
             <div class="text">
