--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 						</div>
 					</div>
 					<div class="work">
-						<img src="images/worldsim.png">
+						<img src="images/worldsimchar.png">
 						<div class="layer">
-							<h3>The Infinite World Simulation</h3>
+							<h3>The Endless World Simulation</h3>
 							<p>Developed in Java, the Infinite World Simulation depicts an endless simulation of
 								numerous interactive entities that exhibit behavioral changes based on both entity
 								and player-controlled events, enhanced with an integrated A-star pathing strategy.
