added software engineering project, fixed minor issues

--- a/index.html
+++ b/index.html
@@ -109,14 +109,16 @@
 				<h1 class="sub-title">My Work</h1>
 				<div class="work-list">
 					<div class="work">
-						<img src="images/uks.png">
+						<img src="images/userStorage_.png">
 						<div class="layer">
-							<h3>Unarmed Knights</h3>
-							<p>Two clueless knights have lost their swords and now must survive the 
-								waves of ghosts with a new tool: a magic rope. Written in C++, this game
-								utilizes SFML to create a fun and replayable game that everyone can enjoy.
-								The sophisticated collision and animation systems provide an immersive
-								game experience that lasts as long as your knights can survive!
+							<h3>User Storage</h3>
+							<p>
+								User Storage is a software application used to store character data.
+								 This software uses JavaScript with react to generate a front-end web 
+								 interface to store user data (people and jobs) into a MongoDB, 
+								 generating a unique ID for each individual. On the backend, 
+								 Express.Js is used with HTTP calls to communicate and send 
+								 information from the front-end into the Mongoose Data Base.
 							</p>
 							<a href="https://github.com/baxtertyler/Unarmed-Knights">
 								<i class="fa-solid fa-code"></i>
