--- a/projects.html
+++ b/projects.html
@@ -10,28 +10,32 @@
         </div>
         <div class="project">
             <div class="picture" style="text-align: center;">
-                <h1>Unarmed Knights</h1>
-                <img src="images/unarmedKnights.png">
+                <h1>User Storage</h1>
+                <img src="images/userStorage.png">
             </div>
             <div class="text">
                 <h1>Project Description</h1>
-                <p>Videogame created in C++ with SFML</p>
+                <p>Software Application developed in JavaScript/React</p>
                 <p>
-                    Two clueless knights have misplaced their swords, and now an army of 
-                    mischievous ghosts is out for a spooky showdown. Employ the power of 
-                    multitasking as you control both knights, one with arrow keys 
-                    and the other with WASD. Their only weapon? A magical rope! Can these knights
-                    survive the spirit onslaught and become the ultimate 
-                    ghostbusters in this endless adventure?
+                    User Storage allows the application user to store character data.
+                    This software uses JavaScript with react to generate a front-end web 
+                    interface to store user data (people and jobs) into the database,
+                    generating a unique ID for each individual. On the backend, Express.Js is 
+                    used with HTTP calls to communicate and send information from the front-end 
+                    into the Mongoose Data Base.
                 </p>
             </div>
             <div class="text">
                 <h1>Role Description</h1>
                 <ul>
-                    <li>Sole creater of the project, generating all coding and implementation in an object-oriented format from start to finish.</li>
-                    <li>Created a sophisticated AABB collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
-                    <li>Implemented dynamic sprite animations using sprite sheets, allowing characters and objects to respond seamlessly to the game's current state and enhancing visual appeal.</li>
-                    <li>Utilized the SFML (Simple and Fast Multimedia Library) import to establish the start/game/end windows and capture key inputs, providing players with an intuitive and responsive gaming interface.</li>
+                    <li>Utilized npm from Node.js to run the application, ensuring efficient server-side 
+                        execution.</li>
+                    <li>Developed the frontend using React with JavaScript and constructed a REST API 
+                        as a crucial component of the backend using Express.js, communicating with 
+                        HTTP calls.</li>
+                    <li>Initially utilized State and Props for frontend data management, but 
+                        evolved the application to integrate MongoDB, enabling secure storage 
+                        of user data and eliminating the need for an internal in-memory user list.</li>
                 </ul>
             </div>
         </div>
@@ -106,6 +110,33 @@
         </div>
         <div class="project">
             <div class="picture" style="text-align: center;">
+                <h1>Unarmed Knights</h1>
+                <img src="images/unarmedKnights.png">
+            </div>
+            <div class="text">
+                <h1>Project Description</h1>
+                <p>Videogame created in C++ with SFML</p>
+                <p>
+                    Two clueless knights have misplaced their swords, and now an army of 
+                    mischievous ghosts is out for a spooky showdown. Employ the power of 
+                    multitasking as you control both knights, one with arrow keys 
+                    and the other with WASD. Their only weapon? A magical rope! Can these knights
+                    survive the spirit onslaught and become the ultimate 
+                    ghostbusters in this endless adventure?
+                </p>
+            </div>
+            <div class="text">
+                <h1>Role Description</h1>
+                <ul>
+                    <li>Sole creater of the project, generating all coding and implementation in an object-oriented format from start to finish.</li>
+                    <li>Created a sophisticated AABB collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
+                    <li>Implemented dynamic sprite animations using sprite sheets, allowing characters and objects to respond seamlessly to the game's current state and enhancing visual appeal.</li>
+                    <li>Utilized the SFML (Simple and Fast Multimedia Library) import to establish the start/game/end windows and capture key inputs, providing players with an intuitive and responsive gaming interface.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="project">
+            <div class="picture" style="text-align: center;">
                 <h1>Shoot the Target!!!</h1>
                 <img src="images/targetpractice.png">
             </div>
@@ -129,13 +160,13 @@
                 <h1>Role Description</h1>
                 <ul>
                     <li>Project leader responsible for creating project deadlines, scheduling work-time meetings, delegating
-                        tasks, and ensuring project completion</li>
+                        tasks, and ensuring project completion.</li>
                     <li>Developed multiple generations dependent on crowd-testing data to ensure a 
-                        seamless and effective game
+                        seamless and effective game.
                     </li>
                     <li>Programmed and implemented critical components including the start and pause menu, target movement, timer and
-                        lives counter, in-game currency</li>
-                    <li>Designed art and programmed behavior for entities and animations</li>
+                        lives counter, in-game currency.</li>
+                    <li>Designed art and programmed behavior for entities and animations.</li>
                 </ul>
             </div>
         </div>
@@ -160,10 +191,10 @@
             <div class="text">
                 <h1>Role Description</h1>
                 <ul>
-                    <li>Sole creater of the project, creating all functional and visual aspects</li>
-                    <li>Implemented an accurate collision system to ensure correct interactions between enemies and user/weapon for a seamless interaction</li>
-                    <li>Personally created all art using Js Paint</li>
-                    <li>Untilized the Pygame Library to establish the game window and capture key inputs to provide smooth gameplay</li>
+                    <li>Sole creater of the project, creating all functional and visual aspects.</li>
+                    <li>Implemented an accurate collision system to ensure correct interactions between enemies and user/weapon for a seamless interaction.</li>
+                    <li>Personally created all art using Js Paint.</li>
+                    <li>Untilized the Pygame Library to establish the game window and capture key inputs to provide smooth gameplay.</li>
                 </ul>
             </div>
         </div>
