--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								 Express.Js is used with HTTP calls to communicate and send 
 								 information from the front-end into the Mongoose Data Base.
 							</p>
-							<a href="https://github.com/baxtertyler/React-app">
+							<a href="https://github.com/baxtertyler/React-app/tree/mongoose">
 								<i class="fa-solid fa-code"></i>
 							</a>
 						</div>
@@ -171,7 +171,7 @@
 							<a href="https://github.com/baxtertyler?tab=repositories"><i class="fa-brands fa-github"></i></a>
 							<a href="https://www.linkedin.com/in/tylerbaxter/"><i class="fa-brands fa-linkedin"></i></a>
 						</div>
-						<a href="my-cv.pdf" download class="btn btn2">Download CV</a>
+						<a href="tybaxter_resumePDF.pdf" download class="btn btn2">Download CV</a>
 					</div>
 					<div class="contact-right">
 						<form name="submit-to-google-sheet">
