--- a/index.html
+++ b/index.html
@@ -109,18 +109,16 @@
 				<h1 class="sub-title">My Work</h1>
 				<div class="work-list">
 					<div class="work">
-						<img src="images/userStorage_.png">
+						<img src="images/criblogo.png">
 						<div class="layer">
-							<h3>User Storage</h3>
+							<h3>Crib</h3>
 							<p>
-								User Storage is a software application used to store character data.
-								 This software uses JavaScript with react to generate a front-end web 
-								 interface to store user data (people and jobs) into a MongoDB, 
-								 generating a unique ID for each individual. On the backend, 
-								 Express.Js is used with HTTP calls to communicate and send 
-								 information from the front-end into the Mongoose Data Base.
+								Crib is an innovative software engineering project designed to simplify and streamline 
+								household chore management among roommates. As the sole backend engineer on the project, I established a Rest 
+								API from the ground up using Node.js and Express.js A. Crib utilizes a cloud-based database to ensure 
+								seamless storage and retrieval of critical project data, and uses user authentication mechanisms, fortifying the platform's security and privacy features.
 							</p>
-							<a href="https://github.com/baxtertyler/React-app/tree/mongoose">
+							<a href="https://github.com/baxtertyler/Crib">
 								<i class="fa-solid fa-code"></i>
 							</a>
 						</div>
@@ -140,16 +138,17 @@
 						</div>
 					</div>
 					<div class="work">
-						<img src="images/weatherBot.png">
+						<img src="images/spimlogo.png">
 						<div class="layer">
-							<h3>WeatherBOT</h3>
-							<p>Developed in Python, weatherBOT is the last weather forceast provider
-								you will every need! Using packages smtplib and emailMessage, weatherBOT provides
-								the user with daily practical weather information. This program
-								uses analysis of .csv files based on current weather patterns to send
-								texts or emails with personalized recommendations to stay comfortable every day.
+							<h3>SPIM Emulator</h3>
+							<p>A comprehensive SPIM emulator crafted in Java for executing MIPS assembly code. 
+								Users can dynamically navigate the program, choosing to step through lines, run 
+								specific segments, or execute the entire code. Inspection of memory and register 
+								values is available at any point, and users can terminate the program or reset the 
+								register state. Advanced enhancements introduced a pipeline and branch predictor
+								with precise addition of stalls and squashes as needed.
 							</p>
-							<a href="https://github.com/baxtertyler/WeatherBOT">
+							<a href="https://github.com/baxtertyler/SPIM_emulator">
 								<i class="fa-solid fa-code"></i>
 							</a>
 						</div>
