--- a/projects.html
+++ b/projects.html
@@ -10,32 +10,31 @@
         </div>
         <div class="project">
             <div class="picture" style="text-align: center;">
-                <h1>User Storage</h1>
-                <img src="images/userStorage.png">
+                <h1>Crib</h1>
+                <img src="images/crib.png">
             </div>
             <div class="text">
                 <h1>Project Description</h1>
                 <p>Software Application developed in JavaScript/React</p>
                 <p>
-                    User Storage allows the application user to store character data.
-                    This software uses JavaScript with react to generate a front-end web 
-                    interface to store user data (people and jobs) into the database,
-                    generating a unique ID for each individual. On the backend, Express.Js is 
-                    used with HTTP calls to communicate and send information from the front-end 
-                    into the Mongoose Data Base.
+                    Crib is an innovative software engineering project designed to simplify and streamline 
+                    household chore management among roommates. This application facilitates the creation 
+                    of user accounts and households, providing seamless synchronization across multiple accounts. 
+                    Users can efficiently allocate and select chores, with the option for random assignment, 
+                    while chore dates are conveniently stored in an integrated calendar. Crib aims to enhance
+                     the organization and scheduling of household responsibilities, fostering a collaborative
+                      and harmonious living environment.
                 </p>
             </div>
             <div class="text">
                 <h1>Role Description</h1>
                 <ul>
-                    <li>Utilized npm from Node.js to run the application, ensuring efficient server-side 
-                        execution.</li>
-                    <li>Developed the frontend using React with JavaScript and constructed a REST API 
-                        as a crucial component of the backend using Express.js, communicating with 
-                        HTTP calls.</li>
-                    <li>Initially utilized State and Props for frontend data management, but 
-                        evolved the application to integrate MongoDB, enabling secure storage 
-                        of user data and eliminating the need for an internal in-memory user list.</li>
+                    <li>Sole backend engineer responsible for implementing the entire backend infrastructure.</li>
+                    <li>Established a Rest API from the ground up using Node.js and Express.js, optimizing data
+                        communication between the front and back ends</li>
+                    <li>Implemented the setup and management of a cloud-based database to ensure seamless storage and
+                        retrieval of critical project data.</li>
+                    <li>Established user authentication mechanisms, fortifying the platform's security and privacy features.</li>
                 </ul>
             </div>
         </div>
@@ -74,6 +73,91 @@
         </div>
         <div class="project">
             <div class="picture" style="text-align: center;">
+                <h1>MIPS Assembler</h1>
+                <img src="images/spim.png">
+            </div>
+            <div class="text">
+                <h1>Project Description</h1>
+                <p>Two-pass SPIM emulator to run MIPS assembly code, created in Java</p>
+                <p>
+                    Fully functional SPIM emulator in Java for executing MIPS assembly code. The emulator 
+                    allows users to navigate through the program dynamically, offering options to step 
+                    through lines, run specific segments, or execute the entire program. Users can inspect
+                    memory and register values at any point, terminate the program, and reset the register 
+                    state. Later enhancements included the integration of a pipeline and branch predictor, 
+                    including accurate addition of stalls and squashes when required.
+                </p>
+            </div>
+            <div class="text">
+                <h1>Role Description</h1>
+                <ul>
+                    <li>Developed the two-pass SPIM emulator from the ground up, utilizing Java to create a robust platform for executing MIPS assembly code.</li>
+                    <li>Enable users to interact with the emulator by stepping through lines, running specific program segments, or executing the entire code.</li>
+                    <li>Integrated functionality for users to inspect memory and register values at any point during program execution.</li>
+                    <li>Evolved the emulator by adding a pipeline and branch predictor, demonstrating a keen understanding of computer architecture and enhancing the emulator's capabilities for accurate program execution.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="project">
+            <div class="picture" style="text-align: center;">
+                <h1>Unarmed Knights</h1>
+                <img src="images/unarmedKnights.png">
+            </div>
+            <div class="text">
+                <h1>Project Description</h1>
+                <p>Videogame created in C++ with SFML</p>
+                <p>
+                    Two clueless knights have misplaced their swords, and now an army of 
+                    mischievous ghosts is out for a spooky showdown. Employ the power of 
+                    multitasking as you control both knights, one with arrow keys 
+                    and the other with WASD. Their only weapon? A magical rope! Can these knights
+                    survive the spirit onslaught and become the ultimate 
+                    ghostbusters in this endless adventure?
+                </p>
+            </div>
+            <div class="text">
+                <h1>Role Description</h1>
+                <ul>
+                    <li>Sole creater of the project, generating all coding and implementation in an object-oriented format from start to finish.</li>
+                    <li>Created a sophisticated AABB collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
+                    <li>Implemented dynamic sprite animations using sprite sheets, allowing characters and objects to respond seamlessly to the game's current state and enhancing visual appeal.</li>
+                    <li>Utilized the SFML (Simple and Fast Multimedia Library) import to establish the start/game/end windows and capture key inputs, providing players with an intuitive and responsive gaming interface.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="project">
+            <div class="picture" style="text-align: center;">
+                <h1>User Storage</h1>
+                <img src="images/userStorage.png">
+            </div>
+            <div class="text">
+                <h1>Project Description</h1>
+                <p>Software Application developed in JavaScript/React</p>
+                <p>
+                    User Storage allows the application user to store character data.
+                    This software uses JavaScript with react to generate a front-end web 
+                    interface to store user data (people and jobs) into the database,
+                    generating a unique ID for each individual. On the backend, Express.Js is 
+                    used with HTTP calls to communicate and send information from the front-end 
+                    into the Mongoose Data Base.
+                </p>
+            </div>
+            <div class="text">
+                <h1>Role Description</h1>
+                <ul>
+                    <li>Utilized npm from Node.js to run the application, ensuring efficient server-side 
+                        execution.</li>
+                    <li>Developed the frontend using React with JavaScript and constructed a REST API 
+                        as a crucial component of the backend using Express.js, communicating with 
+                        HTTP calls.</li>
+                    <li>Initially utilized State and Props for frontend data management, but 
+                        evolved the application to integrate MongoDB, enabling secure storage 
+                        of user data and eliminating the need for an internal in-memory user list.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="project">
+            <div class="picture" style="text-align: center;">
                 <h1>WeatherBOT</h1>
                 <img src="images/weatherBot.png">
             </div>
@@ -105,33 +189,6 @@
                     <li>Leveraged Python's capabilities to analyze and interpret complex weather data, 
                         transforming it into actionable insights for users.
                     </li>
-                </ul>
-            </div>
-        </div>
-        <div class="project">
-            <div class="picture" style="text-align: center;">
-                <h1>Unarmed Knights</h1>
-                <img src="images/unarmedKnights.png">
-            </div>
-            <div class="text">
-                <h1>Project Description</h1>
-                <p>Videogame created in C++ with SFML</p>
-                <p>
-                    Two clueless knights have misplaced their swords, and now an army of 
-                    mischievous ghosts is out for a spooky showdown. Employ the power of 
-                    multitasking as you control both knights, one with arrow keys 
-                    and the other with WASD. Their only weapon? A magical rope! Can these knights
-                    survive the spirit onslaught and become the ultimate 
-                    ghostbusters in this endless adventure?
-                </p>
-            </div>
-            <div class="text">
-                <h1>Role Description</h1>
-                <ul>
-                    <li>Sole creater of the project, generating all coding and implementation in an object-oriented format from start to finish.</li>
-                    <li>Created a sophisticated AABB collision system to ensure accurate interactions between weapons, enemies, and obstacles, enhancing the overall gameplay experience.</li>
-                    <li>Implemented dynamic sprite animations using sprite sheets, allowing characters and objects to respond seamlessly to the game's current state and enhancing visual appeal.</li>
-                    <li>Utilized the SFML (Simple and Fast Multimedia Library) import to establish the start/game/end windows and capture key inputs, providing players with an intuitive and responsive gaming interface.</li>
                 </ul>
             </div>
         </div>
