--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
                         <p>
-                            I am a passionate third-year student at Cal Poly SLO
+                            I am a passionate fourth-year student at cal poly SLO
                             pursuing a degree in computer science. My academic
                             journey has ignited a deep fascination for various
                             realms within technology, including software
